--- a/app/src/main/res/layout/layout_single_line_comment.xml
+++ b/app/src/main/res/layout/layout_single_line_comment.xml
@@ -4,10 +4,42 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/singleCommentLineText"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:weightSum="1"
+        android:layout_marginBottom="10dp"
+        android:background="@android:color/darker_gray">
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Name Surname"
+            android:id="@+id/commentAuthorName"
+            android:layout_weight="0.5"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical|left"
+            android:textStyle="bold"
+            android:textSize="@dimen/common_small_font_size"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:layout_weight="0.5"
+            android:id="@+id/commentDate"
+            android:textStyle="bold"
+            android:gravity="right"
+            android:textSize="@dimen/common_small_font_size"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mesage text"
+        android:id="@+id/commentContent"
+        android:textSize="@dimen/common_small_font_size"
+        android:layout_marginBottom="10dp"
+        />
 </LinearLayout>
