--- a/app/src/main/res/layout/layout_source_diff_line.xml
+++ b/app/src/main/res/layout/layout_source_diff_line.xml
@@ -7,7 +7,7 @@
 
         <TextView
             android:id="@+id/lineNumberBeforeChangeText"
-            android:layout_width="0dp"
+            android:minWidth="20dp"
             android:layout_weight="0.05"
             android:layout_height="@dimen/common_medium_line_height"
             android:textSize="@dimen/common_medium_font_size"
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/lineNumberAfterChangeText"
-            android:layout_width="0dp"
+            android:minWidth="20dp"
             android:layout_weight="0.05"
             android:layout_height="@dimen/common_medium_line_height"
             android:textSize="@dimen/common_medium_font_size"
