--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="common_medium_line_height">30dp</dimen>
     <dimen name="common_small_line_height">20dp</dimen>
 
+    <dimen name="common_big_font_size">20sp</dimen>
     <dimen name="common_medium_font_size">17sp</dimen>
     <dimen name="common_small_font_size">15sp</dimen>
 
